Add course code

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
 			<!-- Fiches produits -->
 			<section class="fiches">
+				<!-- Code ajouté -->
+				<div class="abordables">
+
+				</div>
 			</section>
 		</main>
 	</body>
