Add course code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Les Bonnes Pièces</title>
 		<link rel="stylesheet" href="styles.css">
+		<script src="node_modules/chart.js/dist/chart.js" defer></script>
 		<script type="module" src="pieces.js"></script>
 	</head>
 	<body>
@@ -37,9 +38,11 @@
 					<input type="number" name="nbEtoiles" min="0" max="5"><br>
 					<button>Envoyer</button>
 				</form>
-				<!-- code à ajouter-->
 				<h3>Données</h3>
 				<button class="btn-maj">Mettre à jour les pièces</button>
+				<!-- code à ajouter-->
+				<h3>Aperçu des avis</h3>
+				<canvas id="graphique-avis" width="300" height="300"></canvas>
 			</section>
 
 			<!-- Fiches produits -->
