--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 			<!-- Fiches produits -->
 			<section class="fiches">
 				<!-- Code ajouté -->
-				
+				<div class="abordables">
+					<p>Pièces abordables :</p>
+				</div>
 			</section>
 		</main>
 	</body>
