--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 			<section class="fiches">
 				<!-- Code ajouté -->
 				<div class="abordables">
-
+					<p>Pièces abordables:</p>
 				</div>
 				<div class="disponibles">
-					
+					<p>Pièces disponibles:</p>	
 				</div>
 			</section>
 		</main>
