update chart.js to 4.1.2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Les Bonnes Pièces</title>
 		<link rel="stylesheet" href="styles.css">
-		<script src="node_modules/chart.js/dist/chart.js" defer></script>
+		<script src="node_modules/chart.js/dist/chart.umd.js" defer></script>
 		<script type="module" src="pieces.js"></script>
 	</head>
 	<body>
