--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 				<h3>Filtres</h3>
 				<button class="btn-trier">Trier par prix croissant</button>
 				<br>
+				<button class="btn-trier-decroissant">Trier par prix décroissant</button>
+				<br>
 				<button class="btn-filtrer">Filtrer les pièces non abordables</button>
+				<br>
+				<button class="btn-filtrer-desc">Filtrer les pièces avec description</button>
 			</section>
 
 			<!-- Fiches produits -->
