--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Les Bonnes Pièces</title>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="styles-actualise.css">
 		<script type="module" src="pieces.js"></script>
 	</head>
 	<body>
