Ajout deux boutons et deux écouteurs d'événements
Ajout de deux boutons dans index.html. L'un pour trier par ordre décroissant de prix, l'autre pour filtrer les pièces qui ont une description. Ajout de deux écouteurs d'événements  liés à ces boutons dans pieces.js.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 				<h3>Filtres</h3>
 				<button class="btn-trier">Trier par prix croissant</button>
 				<br>
+				<button class="btn-trierDecroissant">Trier par prix décroissant</button>
+				<br>
 				<button class="btn-filtrer">Filtrer les pièces non abordables</button>
+				<br>				
+				<button class="btn-description">Filtrer les pièces par description</button>
 			</section>
-
 			<!-- Fiches produits -->
 			<section class="fiches">
 			</section>
