--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 				<div class="abordables">
 					<p>Pièces abordables :</p>
 				</div>
+				<div class="disponibles">
+					<p>Pièces disponibles : </p>
+				</div>
 			</section>
 		</main>
 	</body>
