Ajout de la section produits disponibles

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 			</section>
 			<!-- Fiches produits -->
 			<section class="fiches">
+				<!-- Ajout de code -->
+				<div class="abordable">
+					<p>Pièces abordables :</p>
+				</div>
+				<div class="disponible">
+					<p>Pièces disponibles :</p>
+				</div>
 			</section>
 		</main>
 	</body>
