Ajout de la balise input de type range

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 				<button class="btn-filtrer">Filtrer les pièces non abordables</button>
 				<br>				
 				<button class="btn-description">Filtrer les pièces par description</button>
+				<p>Prix maximum</p>
+				<input type="range" min="5" max="60" step="5" name="prixMax" id="prixMax">
+
 			</section>
 			<!-- Fiches produits -->
 			<section class="fiches">
