--- a/index.html
+++ b/index.html
@@ -5,20 +5,59 @@
 		<title>Les Bonnes Pièces</title>
 		<link rel="stylesheet" href="styles.css">
 		<script type="module" src="pieces.js"></script>
+		<script src="node_modules/chart.js/dist/chart.umd.js" defer></script>
 	</head>
 	<body>
 		<header>
 			<img src="images/logo-les-bonnes-pieces.png" alt="LOGO">
 			<h1>Les Bonnes Pièces</h1>
+			
 		</header>
 		<main>
 			<!-- Menu de recherche -->
 			<section class="filtres">
 				<h3>Filtres</h3>
+				<button class="btn-trier">Trier par prix croissant</button>
+				<br>
+				<button class="btn-filtrer">Filtrer les pièces non abordables</button>
+				<br>
+				<button class="btn-decroissant">Trier par prix decroissant</button>
+				<br>
+				<button class="btn-noDescription">Filtrer les pièces sans description</button>
+				<br><br>
+				<p>Prix maximum:</p>
+				<input type ="range" name="prix-max" id="prix-max" min="0" max="60" step="5">
+				<!-- code a ajouter -->
+				<h3>Ajouter un avis</h3>
+				<form class="formulaire-avis">
+					Identifiant de la pièce :<br>
+					<input type="number" name="piece-id"><br>
+					Nom d'utilisateur :<br>
+					<input type="text" name="utilisateur"><br>
+					Avis :<br>
+					<input type="text" name="commentaire"><br>
+					Nombre d'étoiles :<br>
+					<input type="number" name="nbEtoiles" min="0" max="5"><br><br>
+					<button>Envoyer</button>
+				</form><br>
+				<!-- code à ajouter-->
+				<h3>Données</h3>
+				<button class="btn-maj">Mettre à jour les pièces</button>
+				<h3>Aperçu des avis</h3>
+				<canvas id="graphique-avis" width="300" height="300"></canvas>
+				<h3>Statistiques commentaires</h3>
+				<canvas id="graphique-dispo" width="300" height="300"></canvas>
 			</section>
 
+			
 			<!-- Fiches produits -->
 			<section class="fiches">
+				<section class="abordables">
+					Pièces abordables :
+				</section>
+				<section class="disponibles">
+					Pièces disponibles :
+				</section>
 			</section>
 		</main>
 	</body>
