--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Les Bonnes Pièces</title>
 		<link rel="stylesheet" href="styles.css" />
 		<script type="module" src="pieces.js"></script>
+		<script src="node_modules/chart.js/dist/chart.umd.js" defer></script>
 	</head>
 	<body>
 		<header>
@@ -27,7 +28,7 @@
 				<br />
 				<input class="input-range" type="range" min="0" max="60" step="5" />
 				<br />
-				<button class="btn-maj"></button>
+				<button class="btn-maj">Remettre à jours</button>
 				<h3>Ajouter un avis</h3>
 				<form class="formulaire-avis">
 					Identifiant de la pièce :<br />
@@ -40,6 +41,12 @@
 					<input type="number" name="etoile" max="5" /><br />
 					<button>Envoyer</button>
 				</form>
+				<div>
+					<h3>Aperçu des avis</h3>
+					<canvas id="graphique-avis" width="300" height="300"></canvas>
+				</div>
+				<h3>Quandtité de commentaire sur les pièces</h3>
+				<canvas id="graphique-piece" width="300" height="300"></canvas>
 			</section>
 
 			<!-- Fiches produits -->
