--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Les Bonnes Pièces</title>
 		<link rel="stylesheet" href="styles.css">
-		<script type="module" src="pieces.js"></script>
+		<script type="module" src="pieces.js" defer></script>
 	</head>
 	<body>
 		<header>
@@ -15,10 +15,28 @@
 			<!-- Menu de recherche -->
 			<section class="filtres">
 				<h3>Filtres</h3>
+				<button class="btn-trier">Trier par prix croissant</button>
+				<br>
+				<button class="btn-filtrer">Filtrer les pièces non abordables</button>
+
+				<br>
+				<button class="btn-decroissant">Decroissant</button>
+				<br>
+				<button class="btn-nodesc">Filtrer Description</button>
+				<br>
+				<p>Prix maximum</p>
+				<input type="range" name="prix-max" id="prix-max" min="0" max="60" step="5" >
 			</section>
 
 			<!-- Fiches produits -->
 			<section class="fiches">
+				<!-- Code ajouté -->
+				<div class="abordables">
+					<p>Pièces abordables</p>
+				</div>
+				<div class="disponibles">
+					<p>Pièces disponibles</p>
+				</div>
 			</section>
 		</main>
 	</body>
