--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 					Nom d'utilisateur :<br>
 					<input type="text" name="utilisateur"><br>
 					Avis :<br>
-					<input type="text" name="commentaire"><br><br>
-					<button>Envoyer</button>
+					<input type="text" name="commentaire"><br>
+					Nombre d'⭐ :<br>
+					<input type="number" name="nbEtoiles"><br>
+					<button class="bouton-fiche submit">Envoyer</button>
 				</form>
 
 			</section>
