feat: add description & decreasing btns

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 				<button class="btn-trier">Trier par prix croissant</button>
 				<br>
 				<button class="btn-filtrer">Filtrer les pièces non abordables</button>
+				<br>
+				<button class="btn-description">Pièces avec description</button>
+				<br>
+				<button class="btn-tri-decroissant">Trier par prix décroissant</button>
 			</section>
 
 			<!-- Fiches produits -->
